fix: fix all bugs

--- a/index.html
+++ b/index.html
@@ -130,6 +130,18 @@
                     <div class="portfolio__project">
                         <img src="./img/portfolio/winter/winter-2.jpeg" alt="winter-2" class="portfolio__project_img">
                     </div>
+                    <div class="portfolio__project">
+                        <img src="./img/portfolio/winter/winter-3.jpeg" alt="winter-3" class="portfolio__project_img">
+                    </div>
+                    <div class="portfolio__project">
+                        <img src="./img/portfolio/winter/winter-4.jpeg" alt="winter-4" class="portfolio__project_img">
+                    </div>
+                    <div class="portfolio__project">
+                        <img src="./img/portfolio/winter/winter-5.jpeg" alt="winter-5" class="portfolio__project_img">
+                    </div>
+                    <div class="portfolio__project">
+                        <img src="./img/portfolio/winter/winter-6.jpeg" alt="winter-6" class="portfolio__project_img">
+                    </div>
                 </div>
 
                 <div class="portfolio__projects">
@@ -145,6 +157,12 @@
                     <div class="portfolio__project">
                         <img src="./img/portfolio/spring/spring-4.jpeg" alt="spring-4" class="portfolio__project_img">
                     </div>
+                    <div class="portfolio__project">
+                        <img src="./img/portfolio/spring/spring-5.jpeg" alt="spring-5" class="portfolio__project_img">
+                    </div>
+                    <div class="portfolio__project">
+                        <img src="./img/portfolio/spring/spring-6.jpeg" alt="spring-6" class="portfolio__project_img">
+                    </div>
                 </div>
 
                 <div class="portfolio__projects">
@@ -156,6 +174,15 @@
                     </div>
                     <div class="portfolio__project">
                         <img src="./img/portfolio/summer/summer-3.jpeg" alt="summer-3" class="portfolio__project_img">
+                    </div>
+                    <div class="portfolio__project">
+                        <img src="./img/portfolio/summer/summer-4.jpeg" alt="summer-4.jpeg" class="portfolio__project_img">
+                    </div>
+                    <div class="portfolio__project">
+                        <img src="./img/portfolio/summer/summer-5.jpeg" alt="summer-5" class="portfolio__project_img">
+                    </div>
+                    <div class="portfolio__project">
+                        <img src="./img/portfolio/summer/summer-6.jpeg" alt="summer-6" class="portfolio__project_img">
                     </div>
                 </div>
 
